--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #00001B;
-	background-color: #932F5E;
+	color: #0000E2;
+	background-color: #240303;
 }
 
 .html
@@ -29,7 +29,6 @@
 
 #page_position_content
 {
-	padding-bottom: 7px;
 	width: 0.01px;
 }
 
@@ -48,7 +47,7 @@
 
 #u796
 {
-	z-index: 41;
+	z-index: 42;
 	width: 100px;
 	min-height: 100px;
 	border-style: none;
@@ -62,7 +61,6 @@
 #pppu732
 {
 	width: 0.01px;
-	padding-bottom: 0px;
 	margin-right: -10000px;
 	margin-left: 209px;
 }
@@ -75,7 +73,7 @@
 
 #u732
 {
-	z-index: 43;
+	z-index: 44;
 	height: 90px;
 	width: 90px;
 	vertical-align: top;
@@ -102,6 +100,44 @@
 	background-size: 90px 90px;
 }
 
+#buttonu4659
+{
+	z-index: 41;
+	width: 470px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	left: 130px;
+	background: #590AB1 url("../images/deadmilk_1.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#buttonu4659:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 470px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #590AB1 url("../images/deadmilk_2.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+.hidpi #buttonu4659
+{
+	background-image: url("../images/deadmilk_1_2x.jpg");
+}
+
+.hidpi #buttonu4659:hover
+{
+	background-image: url("../images/deadmilk_2_2x.jpg");
+}
+
 #buttonu4121
 {
 	z-index: 40;
@@ -113,7 +149,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 130px;
+	left: 610px;
 	background: #484848 url("../images/vakit_1-iebuttonu4121-fr.png") no-repeat left center;
 	background: rgba(0,0,0,0) url("../images/vakit_1.jpg") no-repeat left center;
 	background-color: #484848;
@@ -134,6 +170,37 @@
 	background-size: cover;
 }
 
+#buttonu4092
+{
+	z-index: 39;
+	width: 310px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	background: #37CB57 url("../images/login_1-iebuttonu4092-fr.png") no-repeat center center;
+	background: rgba(0,0,0,0) url("../images/login_1.jpg") no-repeat center center;
+	background-color: #37CB57;
+	background-size: cover;
+}
+
+#buttonu4092:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 310px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #37CB57 url("../images/login_2-iebuttonu4092-r-fr.png") no-repeat center center;
+	background: rgba(0,0,0,0) url("../images/login_2.jpg") no-repeat center center;
+	background-color: #37CB57;
+	background-size: cover;
+}
+
 #buttonu4050
 {
 	z-index: 38;
@@ -143,8 +210,9 @@
 	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
 	border-color: #787878;
 	border-radius: 10px;
-	margin-top: 10px;
 	position: relative;
+	margin-right: -10000px;
+	left: 320px;
 	background: #20062E url("../images/major_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -156,7 +224,7 @@
 	width: 470px;
 	height: 150px;
 	min-height: 0px;
-	margin: 10px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #20062E url("../images/major_2.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -171,44 +239,6 @@
 	background-image: url("../images/major_2_2x.jpg");
 }
 
-#pbuttonu4092
-{
-	width: 0.01px;
-	padding-bottom: 0px;
-	margin-right: -10000px;
-	margin-left: 689px;
-}
-
-#buttonu4092
-{
-	z-index: 39;
-	width: 310px;
-	height: 150px;
-	-pie-box-shadow: 0px 8px 8px #E5E5E5;
-	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
-	border-color: #787878;
-	border-radius: 10px;
-	position: relative;
-	background: #37CB57 url("../images/login_1-iebuttonu4092-fr.png") no-repeat center center;
-	background: rgba(0,0,0,0) url("../images/login_1.jpg") no-repeat center center;
-	background-color: #37CB57;
-	background-size: cover;
-}
-
-#buttonu4092:hover
-{
-	-pie-box-shadow: 0px 20px 30px #8C8C8C;
-	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
-	width: 310px;
-	height: 150px;
-	min-height: 0px;
-	margin: 0px;
-	background: #37CB57 url("../images/login_2-iebuttonu4092-r-fr.png") no-repeat center center;
-	background: rgba(0,0,0,0) url("../images/login_2.jpg") no-repeat center center;
-	background-color: #37CB57;
-	background-size: cover;
-}
-
 #buttonu4000
 {
 	z-index: 37;
@@ -218,8 +248,8 @@
 	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
 	border-color: #787878;
 	border-radius: 10px;
-	margin-top: 10px;
 	position: relative;
+	margin-right: -10000px;
 	background: #271932 url("../images/starlord1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -231,7 +261,7 @@
 	width: 470px;
 	height: 150px;
 	min-height: 0px;
-	margin: 10px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #271932 url("../images/starlord2.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -257,6 +287,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #583FD1 url("../images/twitter_app1-iebuttonu3962-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/twitter_app1.jpg") no-repeat center center;
 	background-color: #583FD1;
@@ -288,7 +319,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
 	background: #C58516 url("../images/tie_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -326,6 +356,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #412863 url("../images/slack_1-iebuttonu1717-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/slack_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -357,7 +388,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
 	background: #412863 url("../images/follow_1-iebuttonu1608-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/follow_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -389,7 +419,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 640px;
+	left: 320px;
 	background: #412863 url("../images/eki_1-iebuttonu1462-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/eki_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -1306,7 +1336,7 @@
 	background-image: url("../images/quor_2_2x.jpg");
 }
 
-#pbuttonu3962,#pbuttonu1717,#pbuttonu1895,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu2028,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
+#pbuttonu4092,#pbuttonu4000,#pbuttonu3873,#pbuttonu1608,#pbuttonu1895,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu2028,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
 {
 	width: 0.01px;
 	margin-top: 10px;
@@ -1464,7 +1494,7 @@
 
 #buttonu3776
 {
-	z-index: 45;
+	z-index: 46;
 	width: 58px;
 	height: 58px;
 	border-color: #787878;
@@ -1535,14 +1565,14 @@
 
 #u3804-4
 {
-	z-index: 47;
+	z-index: 48;
 	width: 630px;
 	min-height: 31px;
 	background-color: transparent;
-	line-height: 14px;
 	color: #C19326;
 	text-align: center;
 	font-size: 12px;
+	line-height: 14px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 100;
 	margin-left: 160px;
