--- a/css/deadmilk.css
+++ b/css/deadmilk.css
@@ -1,4 +1,4 @@
-.version.major_kopya /* version checker */
+.version.deadmilk /* version checker */
 {
 	color: #0000F1;
 	background-color: #A40DC2;
