--- a/css/deadmilk.css
+++ b/css/deadmilk.css
@@ -1,7 +1,7 @@
 .version.deadmilk /* version checker */
 {
-	color: #0000F1;
-	background-color: #A40DC2;
+	color: #0000F6;
+	background-color: #03B67F;
 }
 
 .html
@@ -149,7 +149,7 @@
 	margin-right: -10000px;
 	margin-top: 4px;
 	left: 890px;
-	background: transparent url("../images/12.png") no-repeat center center;
+	background: transparent url("../images/1.png") no-repeat center center;
 	background-size: contain;
 }
 
@@ -159,7 +159,7 @@
 	height: 50px;
 	min-height: 0px;
 	margin: 4px -10000px 0px 0px;
-	background: transparent url("../images/22.png") no-repeat center center;
+	background: transparent url("../images/2.png") no-repeat center center;
 	background-size: contain;
 }
 
@@ -169,7 +169,7 @@
 	height: 50px;
 	min-height: 0px;
 	margin: 4px -10000px 0px 0px;
-	background: transparent url("../images/32.png") no-repeat center center;
+	background: transparent url("../images/3.png") no-repeat center center;
 	background-size: contain;
 }
 
@@ -179,23 +179,23 @@
 	height: 50px;
 	min-height: 0px;
 	margin: 4px -10000px 0px 0px;
-	background: transparent url("../images/12.png") no-repeat center center;
+	background: transparent url("../images/1.png") no-repeat center center;
 	background-size: contain;
 }
 
 .hidpi #buttonu4665:hover
 {
-	background-image: url("../images/2_2x2.png");
+	background-image: url("../images/2_2x.png");
 }
 
 .hidpi #buttonu4665:active
 {
-	background-image: url("../images/3_2x2.png");
+	background-image: url("../images/3_2x.png");
 }
 
 .hidpi #buttonu4665,.hidpi #buttonu4665.ButtonSelected
 {
-	background-image: url("../images/1_2x2.png");
+	background-image: url("../images/1_2x.png");
 }
 
 #u4674
