--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000E2;
-	background-color: #240303;
+	color: #00000D;
+	background-color: #01A1D0;
 }
 
 .html
@@ -38,11 +38,26 @@
 	position: relative;
 }
 
+#u4705-4
+{
+	z-index: 52;
+	width: 310px;
+	min-height: 28px;
+	background-color: transparent;
+	opacity: 0;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: alpha(opacity=0);
+	text-align: center;
+	margin-left: 320px;
+	margin-top: 17px;
+	position: relative;
+}
+
 #pu796
 {
 	width: 0.01px;
 	margin-left: -209px;
-	margin-top: 82px;
+	margin-top: 37px;
 }
 
 #u796
