--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000FC;
-	background-color: #C25E14;
+	color: #000004;
+	background-color: #CE8EB6;
 }
 
 .html
@@ -40,7 +40,7 @@
 
 #u4705-4
 {
-	z-index: 49;
+	z-index: 50;
 	width: 310px;
 	min-height: 28px;
 	background-color: transparent;
@@ -62,7 +62,7 @@
 
 #u796
 {
-	z-index: 42;
+	z-index: 43;
 	width: 100px;
 	min-height: 100px;
 	border-style: none;
@@ -88,7 +88,7 @@
 
 #u4713
 {
-	z-index: 53;
+	z-index: 54;
 	width: 102px;
 	background-color: transparent;
 	position: relative;
@@ -96,9 +96,9 @@
 	margin-top: 24px;
 }
 
-#buttonu4659
+#buttonu4769
 {
-	z-index: 41;
+	z-index: 42;
 	width: 470px;
 	height: 150px;
 	-pie-box-shadow: 0px 8px 8px #E5E5E5;
@@ -108,11 +108,11 @@
 	position: relative;
 	margin-right: -10000px;
 	left: 136px;
-	background: #590AB1 url("../images/deadmilk_1.jpg") no-repeat center center;
+	background: #C7413E url("../images/montreal_1.jpg") no-repeat center center;
 	background-size: cover;
 }
 
-#buttonu4659:hover
+#buttonu4769:hover
 {
 	-pie-box-shadow: 0px 20px 30px #8C8C8C;
 	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
@@ -120,18 +120,18 @@
 	height: 150px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
-	background: #590AB1 url("../images/deadmilk_2.jpg") no-repeat center center;
+	background: #C7413E url("../images/montreal_3.jpg") no-repeat center center;
 	background-size: cover;
 }
 
-.hidpi #buttonu4659
+.hidpi #buttonu4769
 {
-	background-image: url("../images/deadmilk_1_2x.jpg");
+	background-image: url("../images/montreal_1_2x.jpg");
 }
 
-.hidpi #buttonu4659:hover
+.hidpi #buttonu4769:hover
 {
-	background-image: url("../images/deadmilk_2_2x.jpg");
+	background-image: url("../images/montreal_3_2x.jpg");
 }
 
 #buttonu4121
@@ -166,6 +166,43 @@
 	background-size: cover;
 }
 
+#buttonu4659
+{
+	z-index: 41;
+	width: 470px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	background: #590AB1 url("../images/deadmilk_1.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#buttonu4659:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 470px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #590AB1 url("../images/deadmilk_2.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+.hidpi #buttonu4659
+{
+	background-image: url("../images/deadmilk_1_2x.jpg");
+}
+
+.hidpi #buttonu4659:hover
+{
+	background-image: url("../images/deadmilk_2_2x.jpg");
+}
+
 #buttonu4092
 {
 	z-index: 39;
@@ -177,6 +214,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 481px;
 	background: #37CB57 url("../images/login_1-iebuttonu4092-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/login_1.jpg") no-repeat center center;
 	background-color: #37CB57;
@@ -208,7 +246,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
 	background: #20062E url("../images/major_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -246,6 +283,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 481px;
 	background: #271932 url("../images/starlord1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -283,7 +321,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 480px;
 	background: #583FD1 url("../images/twitter_app1-iebuttonu3962-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/twitter_app1.jpg") no-repeat center center;
 	background-color: #583FD1;
@@ -315,6 +352,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 320px;
 	background: #C58516 url("../images/tie_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -352,7 +390,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 480px;
 	background: #412863 url("../images/slack_1-iebuttonu1717-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/slack_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -384,6 +421,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 320px;
 	background: #412863 url("../images/follow_1-iebuttonu1608-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/follow_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -415,7 +453,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
+	left: 641px;
 	background: #412863 url("../images/eki_1-iebuttonu1462-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/eki_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -1332,7 +1370,7 @@
 	background-image: url("../images/quor_2_2x.jpg");
 }
 
-#pbuttonu4092,#pbuttonu4000,#pbuttonu3873,#pbuttonu1608,#pbuttonu1895,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu2028,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
+#pbuttonu4659,#pbuttonu4050,#pbuttonu3962,#pbuttonu1717,#pbuttonu1895,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu2028,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
 {
 	width: 0.01px;
 	margin-top: 10px;
@@ -1490,7 +1528,7 @@
 
 #buttonu3776
 {
-	z-index: 43;
+	z-index: 44;
 	width: 58px;
 	height: 58px;
 	border-color: #787878;
@@ -1561,14 +1599,14 @@
 
 #u3804-4
 {
-	z-index: 45;
+	z-index: 46;
 	width: 630px;
 	min-height: 31px;
 	background-color: transparent;
 	color: #C19326;
+	line-height: 14px;
 	text-align: center;
 	font-size: 12px;
-	line-height: 14px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 100;
 	margin-left: 160px;
