--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000EB;
-	background-color: #0CC347;
+	color: #000019;
+	background-color: #3AE29F;
 }
 
 #muse_css_mq
@@ -13,11 +13,12 @@
 {
 	z-index: 1;
 	width: 950px;
-	min-height: 1146px;
+	min-height: 1145.65px;
 	background-image: none;
 	border-width: 0px;
 	border-color: #000000;
 	background-color: transparent;
+	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -35,7 +36,7 @@
 
 #u4705-4
 {
-	z-index: 51;
+	z-index: 52;
 	width: 310px;
 	min-height: 28px;
 	background-color: transparent;
@@ -57,7 +58,7 @@
 
 #u796
 {
-	z-index: 44;
+	z-index: 45;
 	width: 100px;
 	min-height: 100px;
 	border-width: 0px;
@@ -71,6 +72,7 @@
 #ppu4713
 {
 	width: 0.01px;
+	padding-bottom: 0px;
 	margin-right: -10000px;
 	margin-left: 209px;
 }
@@ -83,12 +85,50 @@
 
 #u4713
 {
-	z-index: 55;
+	z-index: 56;
 	width: 102px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 24px;
+}
+
+#buttonu5860
+{
+	z-index: 44;
+	width: 470px;
+	height: 150px;
+	-pie-box-shadow: 0px 8px 8px #E5E5E5;
+	box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+	border-color: #787878;
+	border-radius: 10px;
+	position: relative;
+	margin-right: -10000px;
+	left: 136px;
+	background: #1B1B19 url("../images/dots_1.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#buttonu5860:hover
+{
+	-pie-box-shadow: 0px 20px 30px #8C8C8C;
+	box-shadow: 0px 20px 30px rgba(0,0,0,0.45);
+	width: 470px;
+	height: 150px;
+	min-height: 0px;
+	margin: 0px -10000px 0px 0px;
+	background: #1B1B19 url("../images/dota_2.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+.hidpi #buttonu5860
+{
+	background-image: url("../images/dots_1_2x.jpg");
+}
+
+.hidpi #buttonu5860:hover
+{
+	background-image: url("../images/dota_2_2x.jpg");
 }
 
 #buttonu4871
@@ -102,7 +142,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 136px;
+	left: 616px;
 	background: #5BC9D0 url("../images/brain_1-iebuttonu4871-fr.png") no-repeat left center;
 	background: rgba(0,0,0,0) url("../images/brain_1.jpg") no-repeat left center;
 	background-color: #5BC9D0;
@@ -134,7 +174,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 456px;
 	background: #C7413E url("../images/montreal_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -172,6 +211,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #484848 url("../images/vakit_1-iebuttonu4121-fr.png") no-repeat left center;
 	background: rgba(0,0,0,0) url("../images/vakit_1.jpg") no-repeat left center;
 	background-color: #484848;
@@ -203,7 +243,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
 	background: #590AB1 url("../images/deadmilk_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -241,6 +280,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #37CB57 url("../images/login_1-iebuttonu4092-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/login_1.jpg") no-repeat center center;
 	background-color: #37CB57;
@@ -272,7 +312,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
 	background: #20062E url("../images/major_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -310,6 +349,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 480px;
 	background: #271932 url("../images/starlord1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -347,7 +387,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 480px;
 	background: #583FD1 url("../images/twitter_app1-iebuttonu3962-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/twitter_app1.jpg") no-repeat center center;
 	background-color: #583FD1;
@@ -379,6 +418,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 320px;
 	background: #C58516 url("../images/tie_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -416,7 +456,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 480px;
 	background: #412863 url("../images/slack_1-iebuttonu1717-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/slack_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -448,6 +487,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
+	left: 320px;
 	background: #412863 url("../images/follow_1-iebuttonu1608-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/follow_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -479,7 +519,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	left: 320px;
+	left: 640px;
 	background: #412863 url("../images/eki_1-iebuttonu1462-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/eki_1.jpg") no-repeat center center;
 	background-color: #412863;
@@ -869,7 +909,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1px;
 	background: #E83113 url("../images/rank_1.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -881,7 +920,7 @@
 	width: 470px;
 	height: 150px;
 	min-height: 0px;
-	margin: 1px -10000px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #E83113 url("../images/rank_2.jpg") no-repeat center center;
 	background-size: cover;
 }
@@ -926,12 +965,6 @@
 	background: rgba(0,0,0,0) url("../images/zabit1_2.jpg") no-repeat center center;
 	background-color: #212A2F;
 	background-size: cover;
-}
-
-#pbuttonu2028
-{
-	width: 0.01px;
-	margin-top: 9px;
 }
 
 #buttonu2028
@@ -996,6 +1029,12 @@
 	background: rgba(0,0,0,0) url("../images/samer_2.jpg") no-repeat center center;
 	background-color: #EE9200;
 	background-size: cover;
+}
+
+#pbuttonu2028,#pbuttonu1820
+{
+	width: 0.01px;
+	margin-top: 9px;
 }
 
 #buttonu1820
@@ -1078,7 +1117,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1px;
 	background: #36568D url("../images/steam_1-iebuttonu913-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/steam_1.jpg") no-repeat center center;
 	background-color: #36568D;
@@ -1092,7 +1130,7 @@
 	width: 310px;
 	height: 150px;
 	min-height: 0px;
-	margin: 1px -10000px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #36568D url("../images/steam_2-iebuttonu913-r-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/steam_2.jpg") no-repeat center center;
 	background-color: #36568D;
@@ -1142,7 +1180,6 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 1px;
 	left: 640px;
 	background: #CF7426 url("../images/bahar_1-iebuttonu2101-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/bahar_1.jpg") no-repeat center center;
@@ -1157,7 +1194,7 @@
 	width: 310px;
 	height: 150px;
 	min-height: 0px;
-	margin: 1px -10000px 0px 0px;
+	margin: 0px -10000px 0px 0px;
 	background: #CF7426 url("../images/bahar_2-iebuttonu2101-r-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/bahar_2.jpg") no-repeat center center;
 	background-color: #CF7426;
@@ -1328,6 +1365,12 @@
 	background-size: cover;
 }
 
+#pbuttonu1765,#pbuttonu1792,#pbuttonu913,#pbuttonu1750
+{
+	width: 0.01px;
+	margin-top: 11px;
+}
+
 #buttonu1750
 {
 	z-index: 6;
@@ -1395,12 +1438,6 @@
 .hidpi #buttonu1861:hover
 {
 	background-image: url("../images/quor_2_2x.jpg");
-}
-
-#pbuttonu4121,#pbuttonu4092,#pbuttonu4000,#pbuttonu3873,#pbuttonu1608,#pbuttonu1895,#pbuttonu1848,#pbuttonu2135,#pbuttonu1792,#pbuttonu1820,#pbuttonu913,#pbuttonu1834,#pbuttonu1750,#pbuttonu1915
-{
-	width: 0.01px;
-	margin-top: 10px;
 }
 
 #buttonu1915
@@ -1472,10 +1509,10 @@
 	background-size: cover;
 }
 
-#pbuttonu1765,#pbuttonu1999,#pbuttonu802
+#pbuttonu4769,#pbuttonu4659,#pbuttonu4050,#pbuttonu3962,#pbuttonu1717,#pbuttonu1895,#pbuttonu1848,#pbuttonu2135,#pbuttonu1999,#pbuttonu1834,#pbuttonu1915,#pbuttonu802
 {
 	width: 0.01px;
-	margin-top: 11px;
+	margin-top: 10px;
 }
 
 #buttonu802
@@ -1555,7 +1592,7 @@
 
 #buttonu3776
 {
-	z-index: 45;
+	z-index: 46;
 	width: 58px;
 	height: 58px;
 	border-color: #787878;
@@ -1626,14 +1663,14 @@
 
 #u3804-4
 {
-	z-index: 47;
+	z-index: 48;
 	width: 630px;
 	min-height: 31px;
 	background-color: transparent;
 	color: #C19326;
-	line-height: 14px;
 	text-align: center;
 	font-size: 12px;
+	line-height: 14px;
 	font-family: museo-sans, sans-serif;
 	font-weight: 100;
 	margin-left: 160px;
