--- a/css/whatsapp.css
+++ b/css/whatsapp.css
@@ -1,7 +1,7 @@
-.version.brain_copy /* version checker */
+.version.whatsapp /* version checker */
 {
-	color: #000002;
-	background-color: #B74B58;
+	color: #0000FD;
+	background-color: #443AC2;
 }
 
 #muse_css_mq
@@ -59,7 +59,7 @@
 	border-radius: 10px;
 	position: relative;
 	margin-right: -10000px;
-	background: transparent url("../images/normal-iebuttonu2313-fr.png") no-repeat center center;
+	background: transparent url("../images/normal-iebuttonu5954-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/normal.png") no-repeat center center;
 	background-color: transparent;
 	background-size: contain;
@@ -71,7 +71,7 @@
 	height: 50px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
-	background: transparent url("../images/hover-iebuttonu2313-r-fr.png") no-repeat center center;
+	background: transparent url("../images/hover-iebuttonu5954-r-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/hover.png") no-repeat center center;
 	background-color: transparent;
 	background-size: contain;
@@ -83,7 +83,7 @@
 	height: 50px;
 	min-height: 0px;
 	margin: 0px -10000px 0px 0px;
-	background: transparent url("../images/click-iebuttonu2313-m-fr.png") no-repeat center center;
+	background: transparent url("../images/click-iebuttonu5954-m-fr.png") no-repeat center center;
 	background: rgba(0,0,0,0) url("../images/click.png") no-repeat center center;
 	background-color: transparent;
 	background-size: contain;
